<resources>
    <string name="app_name">VentureSoft</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="consulta">Consultado información</string>
    <string name="atencion">Atención</string>
    <string name="campoVacio">Por favor llenar este campo</string>

    <string name="companydata_i">Company Data</string>
    <string name="buy_i">Buy</string>
    <string name="supervisors_i">Supervisors</string>
    <string name="zones_i">Zones</string>
    <string name="station_i">Station</string>
    <string name="employees_i">Employees</string>
    <string name="audit_i">Audit History</string>
    <string name="reports_i">Reports</string>
    <string name="changepass_i">Change Password</string>
    <string name="settings_i">Settings</string>
    <string name="signoff_i">Sign Off</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Alert
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    //Loader
    <string name="espere">Espere</string>
    <string name="errorAut">Usuario o contraseña incorrecta, intentalo de nuevo</string>
</resources>